name:                parsing
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Chris Allen
maintainer:          cma@bitemyapp.com
category:            Text
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Parsing
  build-depends:       base >=4.7 && <4.8,
                       attoparsec,
                       containers,
                       text
  hs-source-dirs:      .
  default-language:    Haskell2010

benchmark benches
  type: exitcode-stdio-1.0
  main-is: benches.hs
  hs-source-dirs: .
  ghc-options: -Wall -O2 -threaded
  build-depends: base,
                 parsing,
                 criterion,
                 containers,
                 attoparsec,
                 text
  default-language: Haskell2010
